--- a/source/layouts/page.astro
+++ b/source/layouts/page.astro
@@ -83,7 +83,7 @@ const { title, description, bodyClass } = Astro.props;
 
   <body
     class={cn(
-      "overflow-x-clip bg-background font-sans text-foreground antialiased",
+      "overflow-x-scroll fold:overflow-x-clip bg-background font-sans text-foreground antialiased",
       bodyClass,
     )}
   >
