--- a/source/sections/about/content.astro
+++ b/source/sections/about/content.astro
@@ -43,7 +43,7 @@ const t = translations.sections.about;
     data-bento-about
     class:list={[
       "mb-24 grid grid-cols-10 justify-center gap-4",
-      "*:overflow-clip *:rounded-xl *:border *:bg-card",
+      "*:overflow-clip *:rounded-xl *:border *:bg-background",
     ]}
   >
     <article
@@ -254,7 +254,7 @@ const t = translations.sections.about;
 
     <article
       class:list={[
-        "col-span-10 col-start-1 row-start-2 flex flex-col rounded-xl border bg-card py-6",
+        "col-span-10 col-start-1 row-start-2 flex flex-col py-6",
         "md:col-span-5 md:col-start-6 md:row-start-4",
         "lg:col-span-6 lg:-col-start-7 lg:row-span-2 lg:row-start-2",
         "xl:!col-span-4 xl:col-start-1 xl:row-span-2 xl:row-start-2 xl:row-end-5",
@@ -337,7 +337,7 @@ const t = translations.sections.about;
 
       <div
         class:list={[
-          "absolute inset-0 top-1/2 z-20 h-1/2 w-full bg-card gradient-mask-t-50",
+          "absolute inset-0 top-1/2 z-20 h-1/2 w-full gradient-mask-t-50",
           "lg:gradient-mask-t-60",
         ]}
       >
@@ -374,7 +374,7 @@ const t = translations.sections.about;
 
     <article
       class:list={[
-        "col-span-10 col-start-1 row-start-4 flex flex-col rounded-xl border bg-card p-6",
+        "col-span-10 col-start-1 row-start-4 flex flex-col p-6",
         "md:col-span-4 md:col-start-6 md:row-start-2 md:row-end-3 md:px-8 md:py-6",
         "lg:!col-span-4 lg:col-start-1 lg:row-start-2 lg:row-end-3",
         "xl:!col-span-4 xl:col-start-1 xl:!row-start-5 xl:!row-end-6",
