--- a/source/sections/work.astro
+++ b/source/sections/work.astro
@@ -20,7 +20,7 @@ const t = translations.sections.experience;
   title="Where I've worked"
   order={1}
   id="experience"
-  class="mx-auto max-w-screen-xl px-4 sm:px-8 md:px-12 lg:px-16 [&>h2]:pl-3 sm:[&>h2]:pl-6"
+  class="mx-auto max-w-screen-lg animate-fade-up px-4 animate-delay-1000 md:px-0"
   ,
   aria-label="Experience"
 >
@@ -47,8 +47,8 @@ const t = translations.sections.experience;
                   <div
                     class:list={[
                       "absolute -inset-2 -z-[1] hidden rounded-lg transition lg:-inset-6 lg:block",
-                      "group-hover:bg-accent/50 group-hover:shadow-[inset_0_1px_0_0_rgba(148,163,184,0.1)] group-hover:drop-shadow-lg",
-                      "group-focus-within:bg-accent/50 group-focus-within:shadow-[inset_0_1px_0_0_rgba(148,163,184,0.1)] group-focus-within:drop-shadow-lg",
+                      "group-hover:bg-accent/30 group-hover:shadow-[inset_0_1px_0_0_rgba(148,163,184,0.1)] group-hover:drop-shadow-lg",
+                      "group-focus-within:bg-accent/30 group-focus-within:shadow-[inset_0_1px_0_0_rgba(148,163,184,0.1)] group-focus-within:drop-shadow-lg",
                     ]}
                   />
 
