refactor: shadcn utilities

--- a/source/components/base/link.astro
+++ b/source/components/base/link.astro
@@ -3,7 +3,7 @@ import { Icon } from "astro-icon/components";
 import type { HTMLAttributes } from "astro/types";
 import type { Props as TippyProps } from "tippy.js";
 
-import { cn } from "@app/utils";
+import { cn } from "@lib/utils/shadcn";
 
 // Extend the default attributes for extra functionality.
 export type Props = HTMLAttributes<"a"> & {
