--- a/source/layouts/page.astro
+++ b/source/layouts/page.astro
@@ -3,7 +3,7 @@ import "@app/styles/index.css";
 import "tippy.js/animations/scale.css";
 import "tippy.js/dist/tippy.css";
 
-import { cn } from "@app/utils";
+import { cn } from "@lib/utils/shadcn";
 
 type Props = {
   title?: string;
