--- a/source/components/base/badge.astro
+++ b/source/components/base/badge.astro
@@ -1,5 +1,5 @@
 ---
-import { cn } from "@app/utils";
+import { cn } from "@lib/utils/shadcn";
 import type { HTMLAttributes } from "astro/types";
 
 export type Props = HTMLAttributes<"span"> & {
