--- a/source/layouts/header.astro
+++ b/source/layouts/header.astro
@@ -1,5 +1,5 @@
 ---
-import { cn } from "@app/utils";
+import { cn } from "@lib/utils/shadcn";
 import { Hamburguer, NavLinks } from "@modules/navigation";
 import type { HTMLAttributes } from "astro/types";
 import UserLocation from "@app/components/user-location.astro";
