--- a/source/modules/navigation/components/hamburguer.astro
+++ b/source/modules/navigation/components/hamburguer.astro
@@ -1,6 +1,6 @@
 ---
 import type { HTMLAttributes } from "astro/types";
-import { cn } from "@app/utils";
+import { cn } from "@lib/utils/shadcn";
 
 export type Props = HTMLAttributes<"button">;
 const { class: clazz, ...props } = Astro.props;
