--- a/source/sections/skills/components/skill-badge.astro
+++ b/source/sections/skills/components/skill-badge.astro
@@ -1,5 +1,5 @@
 ---
-import { cn } from "@app/utils";
+import { cn } from "@lib/utils/shadcn";
 import Badge, { type Props as BadgeProps } from "@components/base/badge.astro";
 
 import { type SkillName } from "../lib/types";
