--- a/source/layouts/observed-section.astro
+++ b/source/layouts/observed-section.astro
@@ -98,7 +98,7 @@ const { order = 1, title, ...props } = Astro.props;
   {...props}
   data-observed-section={order}
 >
-  <h2 class="my-12 text-3xl font-bold opacity-85">
+  <h2 class="my-12 ml-2 text-pretty text-3xl font-bold opacity-85 sm:ml-0">
     {title}
   </h2>
 
