--- a/source/pages/[...locale]/index.astro
+++ b/source/pages/[...locale]/index.astro
@@ -7,7 +7,7 @@ import { getLocalizedStaticPaths } from "@app/modules/i18n/lib/utils/locales";
 import { Canvas } from "@app/components/experience/canvas";
 
 import Header from "@app/layouts/header.astro";
-import Work from "@app/sections/work.astro";
+import Work from "@app/sections/work/content.astro";
 import Projects from "@app/sections/projects/content.astro";
 import Skills from "@app/sections/skills/content.astro";
 import About from "@app/sections/about/content.astro";
