--- a/source/styles/fonts.css
+++ b/source/styles/fonts.css
@@ -22,7 +22,14 @@
   font-style: normal;
 }
 
-@font-face {
+/* 
+  I had plans on the original design to add monospaced fonts on some content. 
+  But on the final design it's not used. I will leave this here for future use.
+
+  But prevent it from loading on the final build by commenting the @font-face block
+*/
+
+/* @font-face {
   font-family: "Monaspace Neon";
   src:
     url("/fonts/monaspace/monaspace-neon.woff2") format("woff2"),
@@ -43,7 +50,7 @@
   descent-override: 16.01%;
   line-gap-override: 14.72%;
   size-adjust: 135.87%;
-}
+} */
 
 @layer utilities {
   .font-sans {
@@ -52,7 +59,7 @@
       "dlig" on;
   }
 
-  .font-mono {
+  /* .font-mono {
     font-feature-settings:
       "calt" on,
       "dlig" on,
@@ -64,7 +71,7 @@
       "ss06" on,
       "ss07" on,
       "ss08" on;
-  }
+  } */
 
   .font-thin {
     font-variation-settings: "wght" 100;
