--- a/source/layouts/page.astro
+++ b/source/layouts/page.astro
@@ -75,7 +75,7 @@ const { title, description, bodyClass } = Astro.props;
       content="#0c0a09"
     />
 
-    <script src="@app/lib/client/polyfills"></script>
+    <script src="@lib/client/polyfills"></script>
     <slot name="head" />
 
     <title>{title}</title>
