--- a/source/sections/projects/content.astro
+++ b/source/sections/projects/content.astro
@@ -1,62 +1,23 @@
 ---
-import ObservedSection from "@app/layouts/observed-section.astro";
+import { ObservedSection } from "@app/layouts";
+import { getTranslations } from "@app/modules/i18n";
 
-import { Paragraph } from "@app/modules/i18n";
-import ProjectCard from "./components/project-card.astro";
 import { projects } from "./lib/data";
+import ProjectList from "./components/project-list.astro";
 
 const { locale } = Astro.locals;
+const translations = getTranslations(locale);
+const t = translations.sections.projects;
 ---
 
 <ObservedSection
-  class="mt-48"
-  title="Some of my favourite projects"
-  class="mx-auto max-w-screen-2xl px-4 sm:px-8 md:px-12 lg:px-16 [&>h2]:pl-3 sm:[&>h2]:pl-6"
-  ,
-  id="projects"
+  id={t.id}
+  class="mx-auto max-w-screen-2xl animate-fade px-4 animate-delay-[1500ms] xs:px-6"
+  title={t.title}
   order={2}
 >
-  <ul
-    class="space-y-12 py-12 lg:space-y-24"
-    data-projects-list
-  >
-    {
-      projects.map(
-        ({ name, headline, description, featured, ...staticData }) => {
-          // This section only shows the featured ones.
-          if (!featured) {
-            return null;
-          }
-
-          return (
-            <li
-              data-scroll-reveal
-              data-scroll-away
-            >
-              <ProjectCard
-                name={name(locale)}
-                headline={headline(locale)}
-                {...staticData}
-              >
-                <Paragraph
-                  slot="description"
-                  class="text-pretty pr-0 text-sm text-foreground/70 md:text-base xl:pr-16"
-                  text={description(locale)}
-                  data-project-description
-                />
-              </ProjectCard>
-            </li>
-          );
-        },
-      )
-    }
-  </ul>
+  <ProjectList
+    {projects}
+    {locale}
+  />
 </ObservedSection>
-
-<style>
-  :global([data-project-description] a) {
-    text-decoration: underline;
-    text-decoration-color: theme("colors.primary.DEFAULT");
-    text-underline-offset: 0.15em;
-  }
-</style>
