--- a/source/sections/work/components/job-entry.astro
+++ b/source/sections/work/components/job-entry.astro
@@ -82,7 +82,7 @@ function getDatetime(date: Date) {
   </header>
 
   <p
-    class="max-w-[800px] whitespace-pre-line text-pretty text-base text-foreground/80 group-hover:text-accent-foreground/80"
+    class="max-w-[50rem] whitespace-pre-line text-pretty text-base text-foreground/80 group-hover:text-accent-foreground/80"
     set:html={job.description(locale)}
   />
 
