--- a/source/sections/work/content.astro
+++ b/source/sections/work/content.astro
@@ -13,7 +13,7 @@ const t = translations.sections.experience;
 
 <ObservedSection
   id={t.id}
-  class="mx-auto max-w-screen-lg animate-fade-up px-4 animate-delay-1000 xs:px-6 xl:px-0"
+  class="mx-auto max-w-screen-lg animate-fade px-4 animate-delay-1000 xs:px-6"
   aria-label={t.name}
   title={t.title}
   order={1}
