refactor: paragraph component removed. adjust margins on projects list

--- a/source/sections/projects/components/project-card.astro
+++ b/source/sections/projects/components/project-card.astro
@@ -30,7 +30,7 @@ const {
   data-project={name}
   {...articleProps}
   class={cn(
-    "relative mx-2 flex flex-col-reverse items-center xl:grid xl:grid-cols-12 xl:grid-rows-1",
+    "relative flex flex-col-reverse items-center xl:grid xl:grid-cols-12 xl:grid-rows-1",
     articleProps.class,
   )}
 >
@@ -84,7 +84,7 @@ const {
       </div>
 
       <p
-        class="mt-2 text-balance text-center text-sm text-foreground xs:text-left md:text-base"
+        class="mt-2 text-balance text-center text-sm text-foreground xs:text-pretty xs:text-left md:text-base"
       >
         {headline}
       </p>
