--- a/source/pages/[...locale]/index.astro
+++ b/source/pages/[...locale]/index.astro
@@ -28,7 +28,7 @@ export const getStaticPaths = getLocalizedStaticPaths satisfies GetStaticPaths;
   </script>
 </Fragment>
 
-<Page bodyClass="debug-screens">
+<Page>
   <Header
     class="animate-fade-down overflow-x-auto animate-delay-0 animate-duration-500"
   />
