feat: shortened the-izland clip. added poster to each video

--- a/source/sections/projects/components/project-card.astro
+++ b/source/sections/projects/components/project-card.astro
@@ -127,7 +127,7 @@ const {
       loop
       webm={video.webm}
       mp4={video.mp4}
-      poster={preview}
+      poster={video.poster}
       play="onview"
     />
   </div>
