--- a/source/sections/projects/content.astro
+++ b/source/sections/projects/content.astro
@@ -8,6 +8,8 @@ import ProjectList from "./components/project-list.astro";
 const { locale } = Astro.locals;
 const translations = getTranslations(locale);
 const t = translations.sections.projects;
+
+const featuredProjects = projects.filter((project) => project.featured);
 ---
 
 <ObservedSection
@@ -17,7 +19,7 @@ const t = translations.sections.projects;
   order={2}
 >
   <ProjectList
-    {projects}
+    projects={featuredProjects}
     {locale}
   />
 </ObservedSection>
