refactor: shorthand import for lib

--- a/source/modules/navigation/components/nav-links.astro
+++ b/source/modules/navigation/components/nav-links.astro
@@ -11,7 +11,7 @@ const t = translations.sections;
 ---
 
 <script>
-  import { getLenisInstance } from "@app/lib/client/scroll";
+  import { getLenisInstance } from "@lib/client/scroll";
 
   const lenis = getLenisInstance();
   document.querySelectorAll("a[data-nav-link]").forEach(
