--- a/source/pages/[...locale]/index.astro
+++ b/source/pages/[...locale]/index.astro
@@ -21,7 +21,7 @@ export const getStaticPaths = getLocalizedStaticPaths satisfies GetStaticPaths;
 
 <Fragment slot="head">
   <script>
-    import { initLenis } from "@app/lib/client/scroll";
+    import { initLenis } from "@lib/client/scroll";
 
     // Enable smooth-scrolling.
     initLenis();
