--- a/source/sections/about/content.astro
+++ b/source/sections/about/content.astro
@@ -15,7 +15,7 @@ import { getTranslations } from "@app/modules/i18n";
 
 import kh from "./assets/games/kingdom-hearts.png";
 
-import { socials } from "@app/lib/data/socials";
+import { socials } from "@lib/data/socials";
 import Picture from "astro/components/Picture.astro";
 
 const { locale } = Astro.locals;
