--- a/source/sections/hero/content.astro
+++ b/source/sections/hero/content.astro
@@ -2,7 +2,7 @@
 import { Icon } from "astro-icon/components";
 import { Badge, Link } from "@app/components/base";
 
-import { email, github, linkedIn } from "@app/lib/data/socials";
+import { email, github, linkedIn } from "@lib/data/socials";
 import { getTranslations } from "@modules/i18n";
 
 // Retrieve the localized strings for the hero section.
