refactor: remaining import aliases

--- a/source/sections/about/content.astro
+++ b/source/sections/about/content.astro
@@ -1,17 +1,17 @@
 ---
-import { CharacterView } from "@app/components/experience/views/character";
+import { CharacterView } from "@components/experience/views/character";
 import ObservedSection from "@app/layouts/observed-section.astro";
 
 import { ContactDialog } from "./components/contact-dialog";
 
 import { Icon } from "astro-icon/components";
 import MyTime from "./components/my-time.svelte";
-import { Link } from "@app/components/base";
+import { Link } from "@components/base";
 
 import DynamicClock from "./components/dynamic-clock.svelte";
 
 import { education } from "./lib/data";
-import { getTranslations } from "@app/modules/i18n";
+import { getTranslations } from "@modules/i18n";
 
 import kh from "./assets/games/kingdom-hearts.png";
 
