--- a/source/sections/hero/content.astro
+++ b/source/sections/hero/content.astro
@@ -1,6 +1,6 @@
 ---
 import { Icon } from "astro-icon/components";
-import { Badge, Link } from "@app/components/base";
+import { Badge, Link } from "@components/base";
 
 import { email, github, linkedIn } from "@lib/data/socials";
 import { getTranslations } from "@modules/i18n";
