--- a/source/sections/projects/components/project-list.astro
+++ b/source/sections/projects/components/project-list.astro
@@ -1,5 +1,5 @@
 ---
-import { type Locale } from "@app/modules/i18n";
+import { type Locale } from "@modules/i18n";
 
 import ProjectCard from "./project-card.astro";
 import type { ProjectData } from "../lib/types";
