--- a/source/sections/projects/content.astro
+++ b/source/sections/projects/content.astro
@@ -1,6 +1,6 @@
 ---
 import { ObservedSection } from "@app/layouts";
-import { getTranslations } from "@app/modules/i18n";
+import { getTranslations } from "@modules/i18n";
 
 import { projects } from "./lib/data";
 import ProjectList from "./components/project-list.astro";
