--- a/source/layouts/footer.astro
+++ b/source/layouts/footer.astro
@@ -1,5 +1,5 @@
 ---
-import { getTranslations } from "@app/modules/i18n";
+import { getTranslations } from "@modules/i18n";
 import { Icon } from "astro-icon/components";
 
 const translations = getTranslations(Astro.locals.locale);
